# CDX-Theme

./: .env.example  .gitignore  .taurignore  AGENTS.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-Hans.md  README.zh-Hant.md  Trunk.toml  index.html  package.json  rustfmt.toml  ui_config.toml
.github/workflows/: release.yml
.tauri/: README.md  export-windows-signing.sh  generate-windows-codesign.sh  tauri-updator.key.pub  windows-codesign.crt  windows-codesign.thumbprint
app-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app-tauri/capabilities/: default.json
app-tauri/icons/: icon.icns
app-tauri/src/: analytics.rs  app_state.rs  cdp_monitor.rs  codex_launch.rs  commands.rs  image_cache.rs  lib.rs  main.rs  paths.rs  settings_store.rs  theme_catalog.rs  theme_lib.rs  theme_package.rs  theme_tool.rs
app-tauri/src/injector/: mod.rs
app-ui/: Cargo.toml  Trunk.toml  build.rs  index.html
app-ui/src/: api.rs  app.rs  i18n.rs  main.rs  posthog.rs  state.rs  types.rs  window_chrome.rs
app-ui/src/components/: mod.rs  theme_card.rs
app-ui/src/components/layout/: mod.rs  sidebar.rs
app-ui/src/components/ui/: mod.rs  sonner.rs
app-ui/src/pages/: install.rs  library.rs  mod.rs  recommend.rs  settings.rs
app-ui/style/: tailwind.css
assets/: renderer-inject.js
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml
core/src/: apply.rs  cdp.rs  error.rs  launch.rs  lib.rs  pack.rs  package.rs  util.rs
core/src/inject/: mod.rs  theme.rs
scripts/: build.ps1  build.sh
src/: api.rs  i18n.rs  types.rs
src/components/: theme_card.rs
src/components/layout/: status_bar.rs
src/components/ui/: confirm_dialog.rs
src/pages/: install.rs  restore.rs  settings.rs
style/: tailwind.css
types/: Cargo.toml
types/src/: lib.rs  loaded.rs  theme.rs
