[workspace]
members = ["app-ui", "app-tauri", "types", "cli", "core"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"

[workspace.dependencies]
# Workspace crates
cdx-theme-types = { path = "./types" }
cdx-theme-core = { path = "./core" }

# Shared (versions only — enable features in each member)
anyhow = "1.0.103"
base64 = "0.22"
# default-features must live here when members need them off (Cargo forbids overriding true→false).
chrono = { version = "0.4", default-features = false }
clap = "4"
console_error_panic_hook = "0.1.7"
env_filter = "0.1"
futures-util = "0.3"
icons = "0.18.3"
js-sys = "0.3"
leptos = "0.8"
leptos_meta = "0.8.0"
leptos_router = "0.8.0"
leptos_ui = "0.3.22"
log = "0.4"
regex = "1"
reqwest = { version = "0.13", default-features = false }
rustls = { version = "0.23", default-features = false }
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
strum = "0.28.0"
strum_macros = "0.28"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
thiserror = "2"
tokio = "1"
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
tw_merge = "0.1.21"
url = "2"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
posthog-rs = "0.21"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
