[package]
name = "cdx-theme-app"
version.workspace = true
edition.workspace = true
description = "CDXTheme — themes for Codex"
authors = ["cdxtheme"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cdx_theme_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binary name shown in macOS menu bar / process list during `tauri dev`.
[[bin]]
name = "CDXTheme"
path = "src/main.rs"

[build-dependencies]
# Keep `tauri` / `tauri-build` local (not workspace) so the Tauri CLI can rewrite features.
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables Web Inspector in debug / `tauri dev` builds.
# Keep local so the Tauri CLI can rewrite features (workspace inheritance blocks that).
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
cdx-theme-types = { workspace = true }
cdx-theme-core = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "net",
  "io-util",
] }
# Explicit crypto provider for rustls (reqwest / tauri-plugin-updater).
# Must call rustls::crypto::ring::default_provider().install_default() at process start.
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
regex = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
# Application logs use `tracing`; `log` is kept for tauri-plugin-log LevelFilter / Metadata.
# tracing's `log` feature bridges events into the log facade that the plugin captures.
log = { workspace = true }
tracing = { workspace = true, features = ["log"] }
# Same RUST_LOG directive syntax as cargo / env_logger.
env_filter = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
base64 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
posthog-rs = { workspace = true }
