[package]
name = "cdx-theme"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_ui = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "DomTokenList",
  "Storage",
  "MediaQueryList",
  "console",
  "DragEvent",
  "DataTransfer",
  "DataTransferItemList",
  "MouseEvent",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
tw_merge = { workspace = true, features = ["variant"] }
icons = { workspace = true, features = ["leptos"] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
cdx-theme-types = { workspace = true }

[package.metadata.leptos]
tailwind-input-file = "style/tailwind.css"
