[package]
name = "cdx-theme-cli"
version.workspace = true
edition.workspace = true
description = "CLI to pack, unpack, and apply .cdxtheme packages"
authors = ["CDXTheme"]
license = "MIT"

[[bin]]
name = "cdxtheme"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
cdx-theme-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
