[package]
name = "cdx-theme-core"
version.workspace = true
edition.workspace = true
description = "Shared theme pack/unpack/apply and CDP inject for CDXTheme"
authors = ["CDXTheme"]
license = "MIT"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
cdx-theme-types = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
  "net",
  "io-util",
] }
tokio-tungstenite = { workspace = true, features = ["connect"] }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
